--- a/pages/book/room/room.wxml
+++ b/pages/book/room/room.wxml
@@ -11,20 +11,17 @@
   <view class="hotel_bq">
     <view class="clean">
       <view class="clean_left inlineblock">推荐<span class="spaninfo">{{is_tj == 1 ? "是" : "否"}}</span></view>
-      <view class="clean_right inlineblock">营业<span class="spaninfo">{{is_work == 1 ? "是" : "否"}}</span></view>
+      <view class="clean_right inlineblock">空调<span class="spaninfo">{{is_kt == 1 ? "有" : "无"}}</span></view>
     </view>
     <view class="clean">
-      <view class="clean_left inlineblock">wifi<span class="spaninfo">{{is_wifi == 1 ? "有" : "否"}}</span></view>
-      <view class="clean_right inlineblock">窗户<span class="spaninfo">{{is_window == 1 ? "有" : "否"}}</span></view>
+      <view class="clean_left inlineblock">wifi<span class="spaninfo">{{is_wifi == 1 ? "有" : "无"}}</span></view>
+      <view class="clean_right inlineblock">窗户<span class="spaninfo">{{is_window == 1 ? "有" : "无"}}</span></view>
     </view>
     <view class="clean">
       <view class="clean_left inlineblock">面积<span class="spaninfo">{{area}}㎡</span></view>
     </view>
     <view class="clean">
       <view class="clean_right inlineblock">可住人数<span class="spaninfo">{{live}}</span></view>
-    </view>
-    <view class="clean">
-      <view class="clean_left inlineblock">房间总数<span class="spaninfo">{{num}}</span></view>
     </view>
   </view>
   <view class="description">
