--- a/pages/mine/order/order.wxml
+++ b/pages/mine/order/order.wxml
@@ -51,4 +51,9 @@
       </view>
     </view>
   </view>
+  <view wx:if="{{orders.length === 0}}"> 
+    <view class="null">
+      您的订单为空！
+    </view>
+  </view>
 </view>
