--- a/pages/mine/userinfo/userinfo.wxml
+++ b/pages/mine/userinfo/userinfo.wxml
@@ -26,7 +26,7 @@
       <view class="item" wx:if="{{!isEdit}}">{{gender}}</view>
       <view class="item" wx:if="{{isEdit}}">
         <radio-group bindchange="radioChange">
-          <radio value="男" checked />男
+          <radio value="男" />男
           <radio value="女" />女
         </radio-group>
       </view>
